_Source/force-app/main/default/objects/BI_Case_Keywords__c/BI_Case_Keywords__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Case Keywords</label>
</CustomObject>