_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Accounts_and_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Accounts_and_Contacts__c</fullName>
    <label>Accounts and Contacts</label>
    <type>TextArea</type>
</CustomField>