_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <type>TextArea</type>
</CustomField>