_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Chatter__c.field-meta.xml
<CustomField>
    <fullName>Chatter__c</fullName>
    <label>Chatter</label>
    <type>TextArea</type>
</CustomField>