_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Data_Integration__c.field-meta.xml
<CustomField>
    <fullName>Data_Integration__c</fullName>
    <label>Data Integration</label>
    <type>TextArea</type>
</CustomField>