_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Data_Loader__c.field-meta.xml
<CustomField>
    <fullName>Data_Loader__c</fullName>
    <label>Data Loader</label>
    <type>TextArea</type>
</CustomField>