_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Memberships__c.field-meta.xml
<CustomField>
    <fullName>Memberships__c</fullName>
    <label>Memberships</label>
    <type>TextArea</type>
</CustomField>