_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Mobile_Application__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Application__c</fullName>
    <label>Mobile Application</label>
    <type>TextArea</type>
</CustomField>