_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Outlook_Synchronization__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Synchronization__c</fullName>
    <label>Outlook Synchronization</label>
    <type>TextArea</type>
</CustomField>