_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <type>TextArea</type>
</CustomField>