_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Profiles_and_Permissions__c.field-meta.xml
<CustomField>
    <fullName>Profiles_and_Permissions__c</fullName>
    <label>Profiles and Permissions</label>
    <type>TextArea</type>
</CustomField>