_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Record_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Record_Deletion__c</fullName>
    <label>Record Deletion</label>
    <type>TextArea</type>
</CustomField>