_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Record_Merge__c.field-meta.xml
<CustomField>
    <fullName>Record_Merge__c</fullName>
    <label>Record Merge</label>
    <type>TextArea</type>
</CustomField>