_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Reports_and_Dashboards__c.field-meta.xml
<CustomField>
    <fullName>Reports_and_Dashboards__c</fullName>
    <label>Reports and Dashboards</label>
    <type>TextArea</type>
</CustomField>