_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/Sales_Planning__c.field-meta.xml
<CustomField>
    <fullName>Sales_Planning__c</fullName>
    <label>Sales Planning</label>
    <type>TextArea</type>
</CustomField>