_Source/force-app/main/default/objects/BI_Case_Keywords__c/fields/User_Setup_and_Login__c.field-meta.xml
<CustomField>
    <fullName>User_Setup_and_Login__c</fullName>
    <label>User Setup and Login</label>
    <type>TextArea</type>
</CustomField>